@@ -43,6 +43,7 @@ map{ id = "bugs/860_crash_remove_sprite", description = "#860: Crash when removi
 map{ id = "bugs/861_sprite_set_animation_callback", description = "#861: sprite:set_animation() callback parameter" }
 map{ id = "bugs/867_crash_crystal", description = "#867: Crash with crystals" }
 map{ id = "bugs/875_freeze_load_map_tiles_outside", description = "#875: Freeze when loading a map with tiles outside" }
+map{ id = "bugs/880_custom_entity_set_origin", description = "#880: custom_entity_set_origin() not working" }
 map{ id = "bugs/883_collision_test_not_moving_sprite", description = "#883: Custom entity sprite collision not detected when not moving" }
 map{ id = "bugs/889_crash_use_non_saved_item", description = "#889: Crash when using a non saved item" }
 map{ id = "dynamic_tile_tests", description = "Dynamic tile tests" }
